--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -46,10 +46,12 @@
         flex-direction: column;
 
         div {
-            width: 5px;
+            // width: 5px;
+            width: 100%;
             height: 5px;
             background: transparent;
-            border-radius: 50%;
+            // border-radius: 50%;
+            border-radius: 50px;
 
             margin-bottom: 5px;
         }
